...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".DisplaySelectedRecipeActivity">

    <LinearLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/recipe_toolbar"
            layout="@layout/recipe_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="411dp" />
...

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/recipe_image"
                    android:layout_width="100dp"
                    android:layout_height="108dp"
                    app:srcCompat="@drawable/ic_default_image" />

                <ImageButton
                    android:id="@+id/recipe_favorite_image"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/text_recipe_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Recipe Name"
                        android:textColor="?attr/primaryTextColor"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
...
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/ingredients"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredient_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/display_recipe_list_items"/>

        <TextView
            android:id="@+id/direction_header"
...
