<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add_recipe"
        android:icon="@drawable/ic_add_2"
        android:title="Add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_view_cart"
        android:icon="@drawable/ic_cart"
        android:title="Cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item1"
        android:title="Item 1" />
    <item
        android:id="@+id/item2"
        android:title="Item 2" />
</menu>