<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="300"
        android:title="search here..."
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_add_recipe"
        android:icon="@drawable/ic_add_2"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_view_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/advanced_search_item"
        android:title="Advanced Search" />
    <item
        android:id="@+id/action_settings"
        android:title="Settings" />
    <item
        android:id="@+id/action_ingredient_list"
        android:title="View All Ingredients"/>
    <item
        android:id="@+id/action_retrieve_recipe"
        android:title="Retrieve Recipe"/>
    <item
        android:id="@+id/action_paste_recipe"
        android:title="Paste Recipe"/>
    <item
        android:id="@+id/action_view_favorites"
        android:title="View Favorites"/>


</menu>