<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_toolbar"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="?attr/toolbarColor">
    <TextView
        android:id="@+id/toolbarTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/toolbarTextColor"
        android:onClick="onToolbarTextClicked"/>


</androidx.appcompat.widget.Toolbar>