...
                android:layout_width="100dp"
                android:layout_height="108dp"
                android:src="@drawable/ic_default_image"
                app:srcCompat="@drawable/plate" />

            <ImageButton
                android:id="@+id/recipe_favorite_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
...
